<resources>
    <string name="app_name">Chat Gemini</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="view_pager">View Pager</string>
    <string name="app_icon">App icon</string>
    <string name="scroll_view">Scroll view</string>
    <string name="go">GO</string>
    <string name="question">Question</string>
    <string name="question_">Question:</string>
    <string name="ai_">AI:</string>
    <string name="clear_edit_text">Clear edit text</string>
    <string name="plus_sign">+</string>
    <string name="add_image">Add image</string>
    <string name="images">Images</string>
    <string name="no_images_added_yet">No images added yet!!</string>
    <string name="please_wait">Please wait…</string>
    <string name="empty_edit_text_message">Please fill all the required fields!!</string>
    <string name="no_response_received">No response received!!</string>
    <string name="something_went_wrong">Try again, Something went wrong!!</string>
    <string name="image_limit_warning">More than 16 images aren\'t allowed!!</string>
    <string name="image">Image</string>
    <string name="delete_image">Delete image</string>
    <string name="clear_chat">Clear chat</string>
    <string name="send_message">Send message</string>
    <string name="message">Message</string>
    <string name="model">Model</string>
    <string name="error">Error</string>
    <string name="you">You</string>
    <string name="clear_chat_permission">Clear chat permission</string>
    <string name="are_you_sure_you_want_to_delete_the_chats_and_start_from_scratch">Are you sure you want to delete the chats and start from scratch?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back_button">"Back "</string>
    <string name="info">Info</string>
    <string name="share_app">Share app</string>
    <string name="arrow">Arrow</string>
    <string name="rate_us">Rate us</string>
    <string name="share_your_feedback">Share your feedback</string>
    <string name="developed_by">Developed by</string>
    <string name="about">About</string>
    <string name="about_app">Welcome to the Gemini era!!, This app uses Google\'s Gemini API but is not endorsed or certified by Google.</string>
    <string name="sharing_text">Meet the first version of Gemini — our most capable AI model. It is built from the ground up for multi-modality</string>
    <string name="model_text">Model text</string>
    <string name="ai_response">AI response</string>
</resources>