<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color3"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/clear_chat"
        android:src="@drawable/baseline_format_clear_24"
        app:tint="@color/color5"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/clear_chat_permission"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/are_you_sure_you_want_to_delete_the_chats_and_start_from_scratch"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginVertical="16dp">

        <Button
            android:id="@+id/no_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:backgroundTint="@color/red"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/yes_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:backgroundTint="@color/green"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>