<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MainFragment"
    android:background="@color/color2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/color3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:background="@android:color/transparent"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:paddingHorizontal="2dp"
                android:contentDescription="@string/app_icon"
                android:src="@drawable/app_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/akaya_telivigala_regular"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingTop="5dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck"
                app:layout_constraintStart_toEndOf="@id/iv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/info_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_info_24"
                android:background="@drawable/icon_bg"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/back_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:theme="@style/ThemeTabLayout"
            android:contentDescription="@string/tab_layout"
            android:background="@android:color/transparent"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/view_pager"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>