<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="@drawable/icon_bg"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:contentDescription="@string/back_button"
        android:layout_gravity="top|start"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:elevation="4dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="5dp"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="@id/image_view">

        <ImageButton
            android:id="@+id/dlt_img_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="5dp"
            android:src="@drawable/baseline_delete_24"
            android:background="@drawable/btn_bg"
            android:contentDescription="@string/delete_image"
            android:layout_gravity="center_vertical|start"
            android:layout_marginEnd="50dp"
            android:layout_marginVertical="16dp"/>

        <ImageButton
            android:id="@+id/done_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="5dp"
            android:src="@drawable/baseline_done_24"
            android:background="@drawable/btn_bg"
            android:contentDescription="@string/image"
            android:layout_gravity="center_vertical|end"
            android:layout_marginVertical="16dp"/>

    </LinearLayout>

</FrameLayout>