<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/color3">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:background="@drawable/icon_bg"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/back_button" />

            <TextView
                android:id="@+id/activity_title"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/info"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginStart="28dp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/share_app_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:background="@drawable/card_background"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/baseline_share_24"
                    android:padding="8dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/share_app"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:text="@string/share_app"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="56dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="12dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:contentDescription="@string/arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rate_app_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:background="@drawable/card_background"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/baseline_star_24"
                    android:padding="8dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/share_app"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:text="@string/rate_us"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="56dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="12dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:contentDescription="@string/arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/feedback_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:background="@drawable/card_background"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/baseline_contact_mail_24"
                    android:padding="8dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/share_app"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:text="@string/share_your_feedback"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="56dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="12dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:contentDescription="@string/arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/developed_by_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:background="@drawable/card_background"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/twitter"
                    android:padding="8dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/share_app"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:text="@string/developed_by"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="56dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="12dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:contentDescription="@string/arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/card_background"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/baseline_info_24"
                    android:padding="8dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:text="@string/about"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="56dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/v"/>

                <View
                    android:id="@+id/v"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/color3"
                    android:layout_marginTop="44dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/gemini_website_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/v"
                    android:orientation="horizontal"
                    android:background="@android:color/transparent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_app"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="50dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/baseline_arrow_forward_ios_24"
                        android:contentDescription="@string/arrow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>