<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    tools:background="@color/color2">

    <LinearLayout
        android:id="@+id/model_chat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:textStyle="bold"
            android:textColor="@color/black_and_white"
            android:textSize="15sp"
            android:layout_marginStart="16dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="2dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="13dp"
            app:cardBackgroundColor="@color/color1"
            android:layout_marginBottom="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/model_message_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:contentDescription="@string/model_text"
                    android:textColor="@color/white"
                    android:textIsSelectable="true"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/error_message_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    android:drawablePadding="6dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/mild_white"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/baseline_error_24"
                    tools:ignore="TextContrastCheck"
                    tools:text="Something went wrong, Please try again!!" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/you_chat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you"
            android:textStyle="bold"
            android:textColor="@color/black_and_white"
            android:textSize="15sp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end|top"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="2dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="13dp"
            app:cardBackgroundColor="@color/color4"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/you_message_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck"
                tools:text="Tumhare toothpaste me kitna namak hai?" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>